[gd_scene load_steps=2 format=3 uid="uid://hur45g52xpv5"]

[ext_resource type="Script" path="res://shooter/shooter.gd" id="1_o3dlr"]

[node name="Shooter" type="Node2D"]
script = ExtResource("1_o3dlr")

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
